--- a/frontend/src/components/StockPrices/StockPrices.css
+++ b/frontend/src/components/StockPrices/StockPrices.css
@@ -1,98 +1,106 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    margin: 0 20px 100px 20px;
-    padding: 15px;
-  }
-
-  h1 {
-    margin-bottom: 20px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: #007bff;
-    font-size: 2.5rem;
-    text-align: center;
-  }
-
-  .table__container {
-    position: relative;
-    width: 100%;
-    box-shadow: 0px 0px 20px 0px #d1d0d0;
-    border-radius: 30px;
-    overflow: auto;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-  
- .table__wrapper {
-    max-height: calc(100vh - 500px);
-    overflow: hidden;
-    transition: max-height 0.3s ease;
-    overflow: auto;
+
+body {
+  margin: 0 20px 100px 20px;
+  padding: 15px;
 }
-  
-  .table__wrapper.expanded {
-    max-height: 100vh;
-  }
-  
-  .stock__info thead tr {
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 30px;
-  }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 0.9rem;
-  }
-  
-  table th,
-  table td {
-    padding: 10px;
-    text-align: center;
-  }
+h1 {
+  margin-bottom: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #ff913d;
+  font-size: 2.5rem;
+  text-align: center;
+}
 
-  table tr:not(:last-child) th,
-  table tr:not(:last-child) td {
-    border-bottom: 1px solid #ccc;
-  }
+.table__container {
+  position: relative;
+  width: 100%;
+  box-shadow: 0px 0px 20px 0px #d1d0d0;
+  border-radius: 30px;
+  overflow: auto;
+}
 
-  table th:not(:last-child),
-  table td:not(:last-child) {
-    border-right: 1px solid #ccc;
-  }
+.table__wrapper {
+  max-height: calc(100vh - 500px);
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  overflow: auto;
+}
 
-  table tr:nth-child(even) {
-    background-color: #e8e8e8;
-  }
-  
-  table tr:nth-child(even):not(:first-child):hover {
-    scale: 1.01;
-  }
+.table__wrapper.expanded {
+  max-height: 100vh;
+}
 
-  table tr:nth-child(odd):hover {
-    scale: 1.01;
-  }
-  
-  .toggle__all__btn {
-    position: absolute;
-    margin-top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    cursor: pointer;
-    transition: transform 0.5s ease;
-    width: 130px;
-    font-size: 1.1rem;
-  }
-  
-  .table__wrapper.expanded + .toggle__all__btn {
-    transform: translateX(-50%) rotate(180deg);
-  }
-  
+.stock__info thead tr {
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 30px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 0.9rem;
+}
+
+table th,
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+table tr:not(:last-child) th,
+table tr:not(:last-child) td {
+  border-bottom: 1px solid #ccc;
+}
+
+table th:not(:last-child),
+table td:not(:last-child) {
+  border-right: 1px solid #ccc;
+}
+
+table tr:nth-child(even) {
+  background-color: #e8e8e8;
+}
+
+/* Apply scaling hover effect to all rows except the first row */
+table tr:nth-child(even):not(:first-child):hover {
+  scale: 1.01;
+}
+
+table tr:nth-child(odd):not(:first-child):hover {
+  scale: 1.01;
+}
+
+table tbody tr:nth-child(1):hover {
+  scale: 1.01;
+}
+
+.toggle__all__btn {
+  position: absolute;
+  margin-top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  transition: transform 0.5s ease;
+  width: 130px;
+  font-size: 1.1rem;
+}
+
+.toggle__all__btn:hover {
+  background-color: #0067d6;
+}
+
+.table__wrapper.expanded + .toggle__all__btn {
+  transform: translateX(-50%) rotate(180deg);
+}
