--- a/frontend/src/components/StockPrices/StockPrices.css
+++ b/frontend/src/components/StockPrices/StockPrices.css
@@ -12,7 +12,7 @@ body {
 h1 {
   margin-bottom: 20px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color: #ff913d;
+  color: #007bff;
   font-size: 2.5rem;
   text-align: center;
 }
