--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,11 +1,13 @@
-body {
-    margin-top: 60px;
+.navbar__container {
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    z-index: 1000;
+    margin-top: 20px;
 }
 
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
+.navbar__container .navbar {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -13,8 +15,8 @@ body {
     background-color: #002f70;
     color: #fff;
     padding: 1rem;
-    z-index: 1000;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
 }
 
 .navbar-left .logo {
