--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -11,11 +11,10 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     background-color: #002f70;
-    color: #fff;
+    align-items: center;
     padding: 1rem;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px 5px #dedede;
     border-radius: 30px;
 }
 
@@ -24,6 +23,7 @@
     font-weight: bold;
     color: #fff;
     text-decoration: none;
+    margin-left: 15px;
 }
 
 .navbar-right .nav-links {
@@ -36,8 +36,9 @@
 .navbar-right .nav-links a {
     color: #fff;
     text-decoration: none;
-    margin-right: 15px;
+    margin-right: 20px;
     font-weight: bold;
+    font-size: 1.13rem;
 }
 
 .navbar-right .nav-links a:hover {
